chore: fixed gap

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -20,8 +20,9 @@
     justify-content: center;
 }
 .container{
-    width: 85%;
+    width: fit-content;
     height: 100%;
+    padding:70px;
     background-color: white;
     display:flex;
     flex-direction: column;
@@ -29,7 +30,8 @@
     justify-content: space-around;
 }
 .div{
+    justify-self: center;
     display:grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 130px;
+    grid-template-columns: repeat(4,1fr);
+    gap: 30px;
 }
